--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -44,6 +44,10 @@ table {
 * {
   box-sizing: border-box; }
 
+/*//////  MIXINS ////////*/
+/*////// PSEUDO ////////*/
+/*////// FLEXBOX ////////*/
+/*////// FONTS ////////*/
 .unselectable {
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -54,46 +58,91 @@ body {
   display: -ms-flexbox;
   display: flex;
   font-family: 'Special Elite';
+  height: 100vh;
+  /* padding-bottom: 500px;*/
   /*width: 100vw;*/
-  /*height: 100vh;*/
-  background-color: #e9e9e9;
+  background-color: #e3e3e3;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center; }
+  justify-content: center;
+  overflow: hidden; }
 
 img {
   position: absolute;
-  width: 800px;
+  width: 700px;
   /*border: 1px solid red;*/ }
 
 .typewriter {
-  z-index: 20; }
+  z-index: 20;
+  top: 150px; }
 
 .horizontal {
   position: absolute;
-  width: 800px;
+  width: 700px;
+  z-index: 50;
+  top: 270px; }
+
+.horizontal2 {
+  position: absolute;
+  width: 600px;
+  top: 250px;
+  -webkit-transform: translateX(120px);
+  -ms-transform: translateX(120px);
+  transform: translateX(120px);
+  /* right: 90px;*/
   /* border: 1px solid green;*/
   z-index: 40;
   /* z-index: 9999;*/ }
 
+.after {
+  position: absolute;
+  width: 700px;
+  top: 153px;
+  -webkit-transform: translateX(120px);
+  -ms-transform: translateX(120px);
+  transform: translateX(120px);
+  z-index: 50; }
+
+.spacebar {
+  position: absolute;
+  cursor: pointer;
+  z-index: 60;
+  left: 0;
+  width: 300px;
+  height: 30px;
+  left: 100px;
+  background: url(../images/spaceBar.png) top center no-repeat;
+  /* border: 1px solid red;*/
+  /* background-size: contain;*/
+  bottom: 0px; }
+
 .text-wrapper {
   width: 500px;
-  height: 147.5px;
+  height: 370px;
   position: absolute;
-  top: 150px;
-  z-index: 10;
-  /* border: 2px solid red;*/
+  top: 0px;
+  border: 2px solid red;
   padding: 0 130px;
   overflow: scroll;
-  z-index: 30; }
+  z-index: 70;
+  -webkit-transform: translateX(120px);
+  -ms-transform: translateX(120px);
+  transform: translateX(120px); }
   .text-wrapper p {
     position: absolute;
     bottom: 30px;
-    border: 1px solid green;
+    /* border: 1px solid green;*/
     height: auto;
     width: 250px;
     font-family: 'Special Elite';
-    word-wrap: break-word; }
+    word-wrap: break-word;
+    overflow: scroll; }
+
+.block {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  z-index: 9999; }
 
 .no-select {
   -webkit-user-select: none;
@@ -102,11 +151,11 @@ img {
 
 .sprite-container {
   position: relative;
-  bottom: -590px;
-  width: 800px;
+  bottom: -540px;
+  width: 500px;
   height: 150px;
-  /* border: 2px solid red;*/
-  z-index: 50; }
+  border: 2px solid red;
+  z-index: 100; }
 
 .sprite {
   position: absolute;
@@ -117,7 +166,7 @@ img {
 
 .sprite-A {
   top: 45px;
-  left: 180px;
+  left: 30px;
   display: block;
   width: 34px;
   height: 22px;
@@ -125,7 +174,7 @@ img {
 
 .sprite-B {
   top: 80px;
-  left: 360px;
+  left: 210px;
   display: block;
   width: 33px;
   height: 23px;
@@ -133,7 +182,7 @@ img {
 
 .sprite-C {
   top: 80px;
-  left: 275px;
+  left: 130px;
   display: block;
   width: 33px;
   height: 23px;
@@ -141,7 +190,7 @@ img {
 
 .sprite-D {
   top: 45px;
-  left: 270px;
+  left: 110px;
   display: block;
   width: 34px;
   height: 22px;
@@ -149,7 +198,7 @@ img {
 
 .sprite-E {
   top: 10px;
-  left: 270px;
+  left: 110px;
   display: block;
   width: 33px;
   height: 21px;
@@ -157,7 +206,7 @@ img {
 
 .sprite-F {
   top: 45px;
-  left: 315px;
+  left: 150px;
   display: block;
   width: 34px;
   height: 22px;
@@ -165,7 +214,7 @@ img {
 
 .sprite-G {
   top: 45px;
-  left: 360px;
+  left: 190px;
   display: block;
   width: 32px;
   height: 23px;
@@ -173,7 +222,7 @@ img {
 
 .sprite-H {
   top: 45px;
-  left: 400px;
+  left: 230px;
   display: block;
   width: 34px;
   height: 23px;
@@ -181,7 +230,7 @@ img {
 
 .sprite-I {
   top: 10px;
-  left: 470px;
+  left: 310px;
   display: block;
   width: 35px;
   height: 23px;
@@ -189,7 +238,7 @@ img {
 
 .sprite-J {
   top: 45px;
-  left: 490px;
+  left: 270px;
   display: block;
   width: 35px;
   height: 23px;
@@ -197,7 +246,7 @@ img {
 
 .sprite-K {
   top: 45px;
-  left: 445px;
+  left: 310px;
   display: block;
   width: 33px;
   height: 23px;
@@ -205,7 +254,7 @@ img {
 
 .sprite-L {
   top: 45px;
-  left: 535px;
+  left: 350px;
   display: block;
   width: 35px;
   height: 23px;
@@ -213,7 +262,7 @@ img {
 
 .sprite-M {
   top: 80px;
-  left: 455px;
+  left: 290px;
   display: block;
   width: 34px;
   height: 23px;
@@ -221,7 +270,7 @@ img {
 
 .sprite-N {
   top: 80px;
-  left: 410px;
+  left: 250px;
   display: block;
   width: 34px;
   height: 22px;
@@ -229,7 +278,7 @@ img {
 
 .sprite-O {
   top: 10px;
-  left: 510px;
+  left: 350px;
   display: block;
   width: 33px;
   height: 21px;
@@ -237,7 +286,7 @@ img {
 
 .sprite-P {
   top: 10px;
-  left: 550px;
+  left: 385px;
   display: block;
   width: 33px;
   height: 22px;
@@ -245,7 +294,7 @@ img {
 
 .sprite-Q {
   top: 10px;
-  left: 190px;
+  left: 35px;
   display: block;
   width: 32px;
   height: 22px;
@@ -254,7 +303,7 @@ img {
 
 .sprite-R {
   top: 10px;
-  left: 310px;
+  left: 150px;
   display: block;
   width: 33px;
   height: 21px;
@@ -262,7 +311,7 @@ img {
 
 .sprite-S {
   top: 45px;
-  left: 225px;
+  left: 70px;
   display: block;
   width: 34px;
   height: 22px;
@@ -270,7 +319,7 @@ img {
 
 .sprite-T {
   top: 10px;
-  left: 350px;
+  left: 190px;
   display: block;
   width: 33px;
   height: 21px;
@@ -278,7 +327,7 @@ img {
 
 .sprite-U {
   top: 10px;
-  left: 430px;
+  left: 270px;
   display: block;
   width: 33px;
   height: 22px;
@@ -286,7 +335,7 @@ img {
 
 .sprite-V {
   top: 80px;
-  left: 315px;
+  left: 170px;
   display: block;
   width: 35px;
   height: 22px;
@@ -294,7 +343,7 @@ img {
 
 .sprite-X {
   top: 80px;
-  left: 230px;
+  left: 90px;
   display: block;
   width: 36px;
   height: 23px;
@@ -302,7 +351,7 @@ img {
 
 .sprite-Y {
   top: 10px;
-  left: 390px;
+  left: 230px;
   display: block;
   width: 34px;
   height: 20px;
@@ -310,7 +359,7 @@ img {
 
 .sprite-Z {
   top: 80px;
-  left: 190px;
+  left: 50px;
   display: block;
   width: 34px;
   height: 24px;
@@ -318,7 +367,7 @@ img {
 
 .sprite-w {
   top: 10px;
-  left: 230px;
+  left: 70px;
   display: block;
   width: 32px;
   height: 21px;
@@ -331,6 +380,14 @@ img {
   -webkit-transform: translateY(10px);
   -ms-transform: translateY(10px);
   transform: translateY(10px); }
+
+.js-ani-spacebar {
+  cursor: pointer;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+  -webkit-transform: translateY(5px);
+  -ms-transform: translateY(5px);
+  transform: translateY(5px); }
 
 .js-ani-trans {
   -webkit-transition: -webkit-transform 1s linear;
