--- a/stylesheets/_js.scss
+++ b/stylesheets/_js.scss
@@ -7,6 +7,15 @@
   transform: translateY(10px);
 }
 
+.js-ani-spacebar {
+  cursor: pointer;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+  -webkit-transform: translateY(5px);
+  -ms-transform: translateY(5px);
+  transform: translateY(5px);
+}
+
 .js-ani-trans {
   -webkit-transition: -webkit-transform 1s linear;
   transition: -webkit-transform 1s linear;
