--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -13,30 +13,47 @@ body {
   display: -ms-flexbox;
   display: flex;
   font-family: 'Special Elite';
+  height: 100vh;
+
+  /* padding-bottom: 500px;*/
 
   /*width: 100vw;*/
-  /*height: 100vh;*/
 
-  background-color: #e9e9e9;
+  background-color: #e3e3e3;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 img {
   position: absolute;
-  width: 800px;
+  width: 700px;
 
   /*border: 1px solid red;*/
 }
 
 .typewriter {
   z-index: 20;
+  top: 150px;
 }
 
 .horizontal {
   position: absolute;
-  width: 800px;
+  width: 700px;
+  z-index: 50;
+  top: 270px;
+}
+
+.horizontal2 {
+  position: absolute;
+  width: 600px;
+  top: 250px;
+  -webkit-transform: translateX(120px);
+  -ms-transform: translateX(120px);
+  transform: translateX(120px);
+
+  /* right: 90px;*/
 
   /* border: 1px solid green;*/
   z-index: 40;
@@ -44,27 +61,63 @@ img {
   /* z-index: 9999;*/
 }
 
+.after {
+  position: absolute;
+  width: 700px;
+  top: 153px;
+  -webkit-transform: translateX(120px);
+  -ms-transform: translateX(120px);
+  transform: translateX(120px);
+  z-index: 50;
+}
+
+.spacebar {
+  position: absolute;
+  cursor: pointer;
+  z-index: 60;
+  left: 0;
+  width: 300px;
+  height: 30px;
+  left: 100px;
+  background: url(../images/spaceBar.png) top center no-repeat;
+
+  /* border: 1px solid red;*/
+
+  /* background-size: contain;*/
+  bottom: 0px;
+}
+
 .text-wrapper {
   width: 500px;
-  height: 147.5px;
+  height: 370px;
   position: absolute;
-  top: 150px;
-  z-index: 10;
-
-  /* border: 2px solid red;*/
+  top: 0px;
+  border: 2px solid red;
   padding: 0 130px;
   overflow: scroll;
-  z-index: 30;
+  z-index: 70;
+  -webkit-transform: translateX(120px);
+  -ms-transform: translateX(120px);
+  transform: translateX(120px);
 
   p {
     position: absolute;
     bottom: 30px;
-    border: 1px solid green;
+
+    /* border: 1px solid green;*/
     height: auto;
     width: 250px;
     font-family: 'Special Elite';
     word-wrap: break-word;
+    overflow: scroll;
   }
+}
+
+.block {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  z-index: 9999;
 }
 
 .no-select {
