adding key binds

--- a/stylesheets/_js.scss
+++ b/stylesheets/_js.scss
@@ -21,4 +21,5 @@
   transition: -webkit-transform 1s linear;
   transition: transform 1s linear;
   transition: transform 1s linear, -webkit-transform 1s linear;
+  transition: transform 1s linear, -webkit-transform 1s linear;
 }
