--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -76,6 +76,15 @@ img {
   z-index: 20;
   top: 150px; }
 
+.typewriter:before {
+  content: 'hello world';
+  position: absolute;
+  height: 100px;
+  width: 500px;
+  background-color: red;
+  top: 0;
+  left: 0; }
+
 .horizontal {
   position: absolute;
   width: 700px;
@@ -137,6 +146,22 @@ img {
     font-family: 'Special Elite';
     word-wrap: break-word;
     overflow: scroll; }
+
+.typer {
+  height: 30px;
+  width: 10px;
+  background-color: #000;
+  position: absolute;
+  top: 320px;
+  -webkit-transform: translateX(6px) translateY(25px);
+  -ms-transform: translateX(6px) translateY(25px);
+  transform: translateX(6px) translateY(25px);
+  z-index: 50; }
+
+.typer-trans {
+  -webkit-transform: translateX(6px) translateY(0px);
+  -ms-transform: translateX(6px) translateY(0px);
+  transform: translateX(6px) translateY(0px); }
 
 .block {
   height: 100vh;
@@ -393,6 +418,7 @@ img {
   -webkit-transition: -webkit-transform 1s linear;
   transition: -webkit-transform 1s linear;
   transition: transform 1s linear;
+  transition: transform 1s linear, -webkit-transform 1s linear;
   transition: transform 1s linear, -webkit-transform 1s linear; }
 
 /*# sourceMappingURL=styles.css.map */
