--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -33,6 +33,19 @@ img {
   /*border: 1px solid red;*/
 }
 
+.shadow {
+  position: absolute;
+
+  /* border: 2px solid green;*/
+  width: 555px;
+  height: 30px;
+  bottom: 35px;
+  box-shadow: 0px 10px 21px -5px rgba(0, 0, 0, 1);
+  border-radius: 50%;
+
+  /* display: none;*/
+}
+
 .typewriter {
   z-index: 20;
   top: 150px;
@@ -109,6 +122,9 @@ img {
   -webkit-transform: translateX(120px);
   -ms-transform: translateX(120px);
   transform: translateX(120px);
+  -webkit-user-select: auto;
+  -moz-user-select: auto;
+  -ms-user-select: auto;
 
   p {
     position: absolute;
@@ -123,30 +139,30 @@ img {
   }
 }
 
-.typer {
-  height: 30px;
-  width: 10px;
-  background-color: #000;
-  position: absolute;
-  top: 320px;
-  -webkit-transform: translateX(6px) translateY(25px);
-  -ms-transform: translateX(6px) translateY(25px);
-  transform: translateX(6px) translateY(25px);
-  z-index: 50;
-}
-
-.typer-trans {
-  -webkit-transform: translateX(6px) translateY(0px);
-  -ms-transform: translateX(6px) translateY(0px);
-  transform: translateX(6px) translateY(0px);
-}
-
-.block {
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
-  z-index: 9999;
-}
+/* .typer {*/
+/*   height: 30px;*/
+/*   width: 10px;*/
+/*   background-color: #000;*/
+/*   position: absolute;*/
+/*   top: 320px;*/
+/*   -webkit-transform: translateX(6px) translateY(25px);*/
+/*   -ms-transform: translateX(6px) translateY(25px);*/
+/*   transform: translateX(6px) translateY(25px);*/
+/*   z-index: 50;*/
+/* }*/
+/**/
+/* .typer-trans {*/
+/*   -webkit-transform: translateX(6px) translateY(0px);*/
+/*   -ms-transform: translateX(6px) translateY(0px);*/
+/*   transform: translateX(6px) translateY(0px);*/
+/* }*/
+/**/
+/* .block {*/
+/*   height: 100vh;*/
+/*   width: 100vw;*/
+/*   position: absolute;*/
+/*   z-index: 9999;*/
+/* }*/
 
 .no-select {
   -webkit-user-select: none;
